--- a/index.html
+++ b/index.html
@@ -4,9 +4,107 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Theo Wolski | Web Dev Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
 </head>
 <body>
-    <h1>Hello, my name is Theo Wolski</h1>
+    <header>
+        <div class="logo">
+            &lt; devtheo &gt;
+        </div>
+
+        <button class="nav-toggle" aria-label="toggle navigation">
+            <span class="hamburger"></span>
+        </button>
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
+                <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
+                <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Introduction -->
+    <section class="intro" id="home">
+        <h1 class="section__title section__title--intro">
+            Hi, I am <strong>Theo Wolski</strong>
+        </h1>
+        <p class="section__subtitle section_subtitle--intro">front-end dev</p>
+        <img src="assets/img/dev-jane-01.png" alt="a picture of Theo Wolski smiling">
+    </section>
+
+    <!-- My Services -->
+    <section class="my-services" id="services">
+        <h2 class="section__title section__title--services">What I Do</h2>
+        <div class="services">
+            <div class="service">
+                <h3>Design + Development</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div> <!-- /service -->
+            <div class="service">
+                <h3>E-Commerce</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div> <!-- /service -->
+            <div class="service">
+                <h3>WordPress</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div> <!-- /service -->
+        </div>
+        <a href="#work" class="btn">My Work</a>
+    </section>
+
+    <!-- About Me -->
+    <section class="about-me" id="about">
+        <h2 class="section__title section__title-about">Who I Am</h2>
+        <p class="section__subtitle section_subtitle-about"></p>
+        <div class="about-me__body">
+            <p></p>
+            <p></p>
+        </div>
+        <img src="assets/img/dev-jane-02.png" alt="Theo leaning against a bus">
+    </section>
+
+    <!-- My Work -->
+    <section class="my-work" id="work">
+        <h2 class="section__title">My Work</h2>
+        <p class="section__subtitle"></p>
+        <div class="portfolio">
+            <a href="" class="portfolio__item">
+                <img src="assets/img/portfolio-1.png" alt="" class="portfolio__img">
+            </a>
+            <a href="" class="portfolio__item">
+                <img src="assets/img/portfolio-2.png" alt="" class="portfolio__img">
+            </a>
+            <a href="" class="portfolio__item">
+                <img src="assets/img/portfolio-3.png" alt="" class="portfolio__img">
+            </a>
+            <a href="" class="portfolio__item">
+                <img src="assets/img/portfolio-4.png" alt="" class="portfolio__img">
+            </a>
+            <a href="" class="portfolio__item">
+                <img src="assets/img/portfolio-5.png" alt="" class="portfolio__img">
+            </a>
+            <a href="" class="portfolio__item">
+                <img src="assets/img/portfolio-6.png" alt="" class="portfolio__img">
+            </a>
+            <a href="" class="portfolio__item">
+                <img src="assets/img/portfolio-7.png" alt="" class="portfolio__img">
+            </a>
+            <a href="" class="portfolio__item">
+                <img src="assets/img/portfolio-8.png" alt="" class="portfolio__img">
+            </a>
+            <a href="" class="portfolio__item">
+                <img src="assets/img/portfolio-9.png" alt="" class="portfolio__img">
+            </a>
+            <a href="" class="portfolio__item">
+                <img src="assets/img/portfolio-10.png" alt="" class="portfolio__img">
+            </a>
+
+        </div>
+    </section>
+
+    <script src="https://kit.fontawesome.com/90e96edf14.js" crossorigin="anonymous"></script>
 </body>
 </html>
