--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Theo Wolski | Web Dev Portfolio</title>
+    
+    <!-- CDN Links -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
+
+    <!-- Custom Styling -->
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <header>
@@ -31,7 +40,7 @@
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Theo Wolski</strong>
         </h1>
-        <p class="section__subtitle section_subtitle--intro">front-end dev</p>
+        <p class="section__subtitle section__subtitle--intro">front-end dev</p>
         <img src="assets/img/dev-jane-01.png" alt="a picture of Theo Wolski smiling">
     </section>
 
@@ -57,11 +66,11 @@
 
     <!-- About Me -->
     <section class="about-me" id="about">
-        <h2 class="section__title section__title-about">Who I Am</h2>
-        <p class="section__subtitle section_subtitle-about"></p>
+        <h2 class="section__title section__title--about">Who I Am</h2>
+        <p class="section__subtitle section__subtitle--about">Designer & developer based out of NYC</p>
         <div class="about-me__body">
-            <p></p>
-            <p></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
         <img src="assets/img/dev-jane-02.png" alt="Theo leaning against a bus">
     </section>
@@ -104,6 +113,27 @@
 
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+        <a href="mailto:theo.wolski@outlook.com" class="footer-link">theo.wolski@outlook.com</a>
+        <ul class="social-list">
+            <li class="social-list__item">
+                <a href="https://codepen.io" class="social-list__link">a</a>
+            </li>
+            <li class="social-list__item">
+                <a href="https://dribbble.com" class="social-list__link">b</a>
+            </li>
+            <li class="social-list__item">
+                <a href="https://twitter.com" class="social-list__link">c</a>
+            </li>
+            <li class="social-list__item">
+                <a href="https://github.com" class="social-list__link">d</a>
+            </li>
+
+        </ul>
+    </footer>
+
 
     <script src="https://kit.fontawesome.com/90e96edf14.js" crossorigin="anonymous"></script>
 </body>
