Style Intro and Services Sections

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             Hi, I am <strong>Theo Wolski</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">front-end dev</p>
-        <img src="assets/img/dev-jane-01.png" alt="a picture of Theo Wolski smiling">
+        <img src="assets/img/dev-jane-01.png" alt="a picture of Theo Wolski smiling" class="intro__img">
     </section>
 
     <!-- My Services -->
