Update styling for Work and Footer sections

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/90e96edf14.js" crossorigin="anonymous"></script>
+
     <!-- Custom Styling -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -72,13 +74,13 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
-        <img src="assets/img/dev-jane-02.png" alt="Theo leaning against a bus">
+        <img src="assets/img/dev-jane-02.png" alt="Theo leaning against a bus" class="about-me__img">
     </section>
 
     <!-- My Work -->
     <section class="my-work" id="work">
-        <h2 class="section__title">My Work</h2>
-        <p class="section__subtitle"></p>
+        <h2 class="section__title section__title--work">My Work</h2>
+        <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
         <div class="portfolio">
             <a href="" class="portfolio__item">
                 <img src="assets/img/portfolio-1.png" alt="" class="portfolio__img">
@@ -115,26 +117,31 @@
     </section>
 
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
         <a href="mailto:theo.wolski@outlook.com" class="footer-link">theo.wolski@outlook.com</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a href="https://codepen.io" class="social-list__link">a</a>
+                <a href="https://codepen.io" class="social-list__link">
+                    <i class="fa-brands fa-codepen"></i>
+                </a>
             </li>
             <li class="social-list__item">
-                <a href="https://dribbble.com" class="social-list__link">b</a>
+                <a href="https://dribbble.com" class="social-list__link">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
             </li>
             <li class="social-list__item">
-                <a href="https://twitter.com" class="social-list__link">c</a>
+                <a href="https://twitter.com" class="social-list__link">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
             </li>
             <li class="social-list__item">
-                <a href="https://github.com" class="social-list__link">d</a>
+                <a href="https://github.com" class="social-list__link">
+                    <i class="fa-brands fa-github"></i>
+                </a>
             </li>
 
         </ul>
     </footer>
-
-
-    <script src="https://kit.fontawesome.com/90e96edf14.js" crossorigin="anonymous"></script>
 </body>
 </html>
