Complete Portfolio Website

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="logo">
             &lt; devtheo &gt;
         </div>
@@ -82,34 +82,34 @@
         <h2 class="section__title section__title--work">My Work</h2>
         <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
         <div class="portfolio">
-            <a href="" class="portfolio__item">
+            <a href="/portfolio-item.html" class="portfolio__item">
                 <img src="assets/img/portfolio-1.png" alt="" class="portfolio__img">
             </a>
-            <a href="" class="portfolio__item">
+            <a href="/portfolio-item.html" class="portfolio__item">
                 <img src="assets/img/portfolio-2.png" alt="" class="portfolio__img">
             </a>
-            <a href="" class="portfolio__item">
+            <a href="/portfolio-item.html" class="portfolio__item">
                 <img src="assets/img/portfolio-3.png" alt="" class="portfolio__img">
             </a>
-            <a href="" class="portfolio__item">
+            <a href="/portfolio-item.html" class="portfolio__item">
                 <img src="assets/img/portfolio-4.png" alt="" class="portfolio__img">
             </a>
-            <a href="" class="portfolio__item">
+            <a href="/portfolio-item.html" class="portfolio__item">
                 <img src="assets/img/portfolio-5.png" alt="" class="portfolio__img">
             </a>
-            <a href="" class="portfolio__item">
+            <a href="/portfolio-item.html" class="portfolio__item">
                 <img src="assets/img/portfolio-6.png" alt="" class="portfolio__img">
             </a>
-            <a href="" class="portfolio__item">
+            <a href="/portfolio-item.html" class="portfolio__item">
                 <img src="assets/img/portfolio-7.png" alt="" class="portfolio__img">
             </a>
-            <a href="" class="portfolio__item">
+            <a href="/portfolio-item.html" class="portfolio__item">
                 <img src="assets/img/portfolio-8.png" alt="" class="portfolio__img">
             </a>
-            <a href="" class="portfolio__item">
+            <a href="/portfolio-item.html" class="portfolio__item">
                 <img src="assets/img/portfolio-9.png" alt="" class="portfolio__img">
             </a>
-            <a href="" class="portfolio__item">
+            <a href="/portfolio-item.html" class="portfolio__item">
                 <img src="assets/img/portfolio-10.png" alt="" class="portfolio__img">
             </a>
 
@@ -143,5 +143,7 @@
 
         </ul>
     </footer>
+
+    <script src="/js/index.js" type="text/javascript"></script>
 </body>
 </html>
