Added button to portfolio item

--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -53,6 +53,9 @@
         <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
         <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
     </div>
+    <div class="portfolio-item-link">
+        <a href="https://theo-wolski.github.io/web-dev-portfolio-v1/" class="btn" target="_blank">Visit Site</a>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
