--- a/portfolio-items/tutorials/bootstrap-5-crash-course/index.html
+++ b/portfolio-items/tutorials/bootstrap-5-crash-course/index.html
@@ -54,7 +54,7 @@
                     </p>
                     <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#enroll">Start The Enrollment</button>
                 </div>
-                <img class="img-fluid w-50 d-none d-sm-block" src="/img/showcase.svg" alt="">
+                <img class="img-fluid w-50 d-none d-sm-block" src="./img/showcase.svg" alt="">
             </div>
         </div>
     </section>
@@ -127,7 +127,7 @@
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md">
-                    <img src="/img/fundamentals.svg" class="img-fluid" alt="">
+                    <img src="./img/fundamentals.svg" class="img-fluid" alt="">
                 </div>
                 <div class="col-md p-5">
                     <h2>Learn The Fundamentals</h2>
@@ -148,7 +148,7 @@
                     <a href="#" class="btn btn-light mt-3"><i class="bi bi-chevron-right"></i> Read More</a>
                 </div>
                 <div class="col-md">
-                    <img src="/img/react.svg" class="img-fluid" alt="">
+                    <img src="./img/react.svg" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
