Remove copy of portfolio item and point to gitHub

--- a/portfolio-items/tutorials/bootstrap-5-crash-course/portfolio-item.html
+++ b/portfolio-items/tutorials/bootstrap-5-crash-course/portfolio-item.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/90e96edf14.js" crossorigin="anonymous"></script>
 
     <!-- Custom Styling -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../../../css/style.css">
 
 </head>
 <body>
@@ -29,10 +29,10 @@
         </button>
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item"><a href="index.html#home" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="index.html#services" class="nav__link">My Services</a></li>
-                <li class="nav__item"><a href="index.html#about" class="nav__link">About Me</a></li>
-                <li class="nav__item"><a href="index.html#work" class="nav__link">My Work</a></li>
+                <li class="nav__item"><a href="../../../index.html#home" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="../../../index.html#services" class="nav__link">My Services</a></li>
+                <li class="nav__item"><a href="../../../index.html#about" class="nav__link">About Me</a></li>
+                <li class="nav__item"><a href="../../../index.html#work" class="nav__link">My Work</a></li>
             </ul>
         </nav>
     </header>
@@ -42,13 +42,13 @@
             The title <strong>of my project</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">A short subtitle</p>
-        <img src="/assets/img/portfolio-1.png" alt="" class="intro__img">
+        <img src="../../../assets/img/portfolio-1.png" alt="" class="intro__img">
     </section>
 
     <div class="portfolio-item-individual">
         <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
         <div class="img-container">
-            <img src="/assets/img/portfolio.png" alt="">
+            <img src="./img/preview.png" alt="">
         </div>
         <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
         <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
