--- a/portfolio-items/tutorials/bootstrap-5-crash-course/portfolio-item.html
+++ b/portfolio-items/tutorials/bootstrap-5-crash-course/portfolio-item.html
@@ -85,6 +85,6 @@
         </ul>
     </footer>
 
-    <script src="/js/index.js" type="text/javascript"></script>
+    <script src="../../../js/index.js" type="text/javascript"></script>
 </body>
 </html>
