--- a/index.html
+++ b/index.html
@@ -144,6 +144,6 @@
         </ul>
     </footer>
 
-    <script src="/js/index.js" type="text/javascript"></script>
+    <script src="./js/index.js" type="text/javascript"></script>
 </body>
 </html>
